--- a/#source/pug/index.pug
+++ b/#source/pug/index.pug
@@ -1,13 +1,12 @@
 extends base/_base
 
 block title
-    title="Title page"
+    title="MOCRM"
     //title your page 'about-us' example
 
 block content
     main
-        div this is index page
-        a(href="page-2.html") page-2
+        
 
 //- connect only custom js
 block scripts
